--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,11 @@
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
       href="https://fonts.googleapis.com/css2?family=Quicksand&family=Ubuntu:wght@300&display=swap"
       rel="stylesheet"
     />
